# margeletv2

./: .env  .gitignore  .log.1  Caddyfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  plopfile.js
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  config.py  config_logging.py  exceptions.py  main.py  pyproject.toml
backend/bootstrap/: check.py  exceptions_fastapi.py  fastapi.py  logging.py  openapi.py  permissions.py  routes.py  run.py
backend/docs/: messagePipeline.excalidraw
backend/docs/docs_tools/: diagram.py
backend/docs_tools/: combine_code.py  combined_code.txt  diagram.py
backend/pactica/: main.py  Текстовый документ.txt
backend/scripts/: entrypoint.sh  secret_env_gen.py  seed.py
backend/src/auth/: router.py  schemas.py  users.py  utils.py
backend/src/chat/: dao.py  models.py  router.py  schemas.py  service.py
backend/src/core/: types.py
backend/src/core/abstract/: dao_base.py  model_base.py  permission.py  permission_base.py  schemas_base.py  service_base.py  service_proxy_dao.py  storage_base.py
backend/src/core/db/: __init__.py  database.py  mixins.py
backend/src/core/nosql/: database.py
backend/src/core/redis/: depends.py  enums.py  redis.py
backend/src/db/: dao_base.py  database.py  enum.py
backend/src/db/alembic/: env.py
backend/src/db/dao/: __init__.py
backend/src/db/models/: __init__.py
backend/src/dependencies/s3/: __init__.py  s3_service.py
backend/src/endpoints/access_token/: depends.py  service.py
backend/src/endpoints/auth/: depends.py  permissions.py  router.py  schemas.py  service.py  users.py
backend/src/endpoints/chat/: dao.py  depends.py  models.py  (+4 more)
backend/src/group/: dao.py  depends.py  models.py  permissions.py  router.py  schemas.py
backend/src/group_clean/: dao.py  depends.py  router.py  schema.py  service.py
backend/src/message/: dao.py  depends.py  no_sql_models.py  permissions.py  router.py  schemas.py  service.py
backend/src/no_sql_db/: dao_base.py  database.py
backend/src/personal_chat/: dao.py  models.py  router.py  schemas.py
backend/src/refresh_token/: dao.py  models.py
backend/src/role_group/: dao.py  models.py  router.py  schemas.py
backend/src/security/: jwt.py  key_gen.py  password_helper.py
backend/src/token/: dao.py  models.py  shemas.py
backend/src/user/: dao.py  depends.py  models.py  router.py  schemas.py  utils.py
backend/src/utils/: base_service.py  depends.py  exceptions.py  exeptions.py  image_utils.py  jwt.py  router_crud.py  types.py  utils.py
backend/tests/endpoints/: conftest.py  test_chat.py  test_group.py  test_personal_chat.py  test_role_group.py
backend/tests/enpoints/: conftest.py  test_chat.py  test_group.py  test_personal_chat.py  test_role_group.py
(+588 files in other folders)
